--- a/server.yaml
+++ b/server.yaml
@@ -22,10 +22,10 @@ Parameters:
     Description: EC2 ssh Keypair 
     Type: String
 
-  BucketName:
-    Type: String
-  HTMLIndexPrefix:
-    Type: String
+  #BucketName:
+    #Type: String
+  #HTMLIndexPrefix:
+    #Type: String
 
 Resources:
 
@@ -94,9 +94,10 @@ Resources:
           apt-get update -y
           apt-get install unzip awscli -y
           apt-get install apache2 -y
-          systemctl start apache2.service
+          systemctl restart apache2.service
+          systemctl enable apache2.service
           cd /var/www/html
-          aws s3 cp "s3://${BucketName}/${HTMLIndexPrefix}" . 
+          aws s3 cp "s3://project2-infra/index.html". 
       ImageId: !Ref UbuntuImageID
       #KeyName: !Ref SSHKeypair
       IamInstanceProfile: !Ref InstanceRole
